<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_add_cart"
        android:layout_width="@dimen/zero_margin"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/widget_margin_small"
        android:layout_marginTop="@dimen/widget_margin_medium"
        android:layout_marginEnd="@dimen/widget_margin_small"
        android:background="@drawable/button_design"
        android:text="@string/text_add_to_cart"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_event" />

    <Button
        android:id="@+id/btn_remove_cart"
        android:layout_width="@dimen/zero_margin"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/widget_margin_small"
        android:layout_marginTop="@dimen/widget_margin_medium"
        android:layout_marginEnd="@dimen/widget_margin_small"
        android:background="@drawable/button_design"
        android:text="@string/text_remove_from_cart"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/switch_event" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50121653" />

    <Button
        android:id="@+id/btn_checkout"
        android:layout_width="@dimen/zero_margin"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/widget_margin_medium"
        android:background="@drawable/button_design"
        android:text="@string/text_checkout"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/btn_add_cart"
        app:layout_constraintStart_toStartOf="@+id/btn_add_cart"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_cart" />

    <Button
        android:id="@+id/btn_cart_expired"
        android:layout_width="@dimen/zero_margin"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/widget_margin_medium"
        android:background="@drawable/button_design"
        android:text="@string/text_cart_expired"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/btn_remove_cart"
        app:layout_constraintStart_toStartOf="@+id/btn_remove_cart"
        app:layout_constraintTop_toBottomOf="@+id/btn_remove_cart" />

    <Button
        android:id="@+id/btn_page_browse"
        android:layout_width="@dimen/zero_margin"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/widget_margin_medium"
        android:background="@drawable/button_design"
        android:text="@string/text_page_browse"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/btn_checkout"
        app:layout_constraintStart_toStartOf="@+id/btn_checkout"
        app:layout_constraintTop_toBottomOf="@+id/btn_checkout" />

    <Button
        android:id="@+id/btn_profile_update"
        android:layout_width="@dimen/zero_margin"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/widget_margin_medium"
        android:background="@drawable/button_design"
        android:text="Profile Update"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btn_cart_expired"
        app:layout_constraintStart_toStartOf="@+id/btn_cart_expired"
        app:layout_constraintTop_toBottomOf="@+id/btn_cart_expired" />

    <Button
        android:id="@+id/btn_opt_in"
        android:layout_width="@dimen/zero_margin"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/widget_margin_medium"
        android:background="@drawable/button_design"
        android:text="@string/text_opt_in"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/btn_page_browse"
        app:layout_constraintStart_toStartOf="@+id/btn_page_browse"
        app:layout_constraintTop_toBottomOf="@+id/btn_page_browse" />

    <Button
        android:id="@+id/btn_opt_out"
        android:layout_width="@dimen/zero_margin"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/widget_margin_medium"
        android:background="@drawable/button_design"
        android:text="@string/text_opt_out"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/btn_profile_update"
        app:layout_constraintStart_toStartOf="@+id/btn_profile_update"
        app:layout_constraintTop_toBottomOf="@+id/btn_profile_update" />

    <Button
        android:id="@+id/btn_custom_data"
        android:layout_width="@dimen/zero_margin"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/widget_margin_medium"
        android:background="@drawable/button_design"
        android:text="@string/text_custom_data"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/btn_opt_in"
        app:layout_constraintStart_toStartOf="@+id/btn_opt_in"
        app:layout_constraintTop_toBottomOf="@+id/btn_opt_in" />

    <Button
        android:id="@+id/btn_other_function"
        android:layout_width="@dimen/zero_margin"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/widget_margin_medium"
        android:background="@drawable/button_design"
        android:text="@string/text_other_function"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/btn_opt_out"
        app:layout_constraintStart_toStartOf="@+id/btn_opt_out"
        app:layout_constraintTop_toBottomOf="@+id/btn_opt_out" />

    <Button
        android:id="@+id/btn_guid"
        android:layout_width="@dimen/zero_margin"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/widget_margin_medium"
        android:background="@drawable/button_design"
        android:text="@string/text_get_guid"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btn_custom_data"
        app:layout_constraintStart_toStartOf="@+id/btn_custom_data"
        app:layout_constraintTop_toBottomOf="@+id/btn_custom_data" />

    <Button
        android:id="@+id/btn_get_notification"
        android:layout_width="@dimen/zero_margin"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/widget_margin_medium"
        android:background="@drawable/button_design"
        android:text="@string/text_get_notification"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/btn_other_function"
        app:layout_constraintStart_toStartOf="@+id/btn_other_function"
        app:layout_constraintTop_toBottomOf="@+id/btn_other_function" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="@dimen/zero_margin"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/widget_margin_medium"
        android:background="@drawable/button_design"
        android:text="@string/text_logout"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/btn_get_notification"
        app:layout_constraintStart_toStartOf="@+id/btn_guid"
        app:layout_constraintTop_toBottomOf="@+id/btn_guid" />

    <TextView
        android:id="@+id/text_notification_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/elevation"
        android:layout_marginRight="@dimen/border_radious"
        android:elevation="@dimen/elevation"
        android:gravity="right"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="14dp"
        android:textStyle="bold"
        android:text="5"
        app:layout_constraintEnd_toEndOf="@+id/btn_get_notification"
        app:layout_constraintTop_toTopOf="@+id/btn_get_notification" />

    <Switch
        android:id="@+id/switch_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/widget_margin_small"
        android:layout_marginTop="@dimen/widget_margin_medium"
        android:layout_marginRight="@dimen/widget_margin_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_ngn_appact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/widget_margin_small"
        android:text="NGN"
        app:layout_constraintBottom_toBottomOf="@+id/switch_event"
        app:layout_constraintEnd_toStartOf="@+id/switch_event"
        app:layout_constraintTop_toTopOf="@+id/switch_event" />

    <TextView
        android:id="@+id/textView_appact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/widget_margin_small"
        android:text="App act"
        app:layout_constraintBottom_toBottomOf="@+id/switch_event"
        app:layout_constraintStart_toEndOf="@+id/switch_event"
        app:layout_constraintTop_toTopOf="@+id/switch_event" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/btn_logout"
        app:layout_constraintStart_toStartOf="@+id/btn_logout"
        app:layout_constraintTop_toBottomOf="@+id/btn_logout"
        android:layout_marginTop="@dimen/action_button_height"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txtCustomPayload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" "/>
        <TextView
            android:id="@+id/txtDeeplink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" "/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
